# python-for-engineers

./: .env.example  .gitignore  README.md  pyproject.toml
data/: machining_data_raw.csv
examples/completion/: completion.py  pydanticai.py
examples/extraction/: extraction.py  problem_desc.txt  pydanticai.py
examples/extraction/service/: openai_service.py
examples/nlp/: nlp-notebook.ipynb
notebooks/: 01-mpm-pandas.ipynb  01a-mpm-numpy.ipynb  02-mpm-eda.ipynb
tasks/lab1-fundamentals/: README.md
tasks/lab2-coding/: README.md
tasks/lab4-eda/: xxxxxx-eda.ipynb
tasks/lab5-ml/: xxxxxx-ml.ipynb
tasks/lab6-llm/: README.md  classification_task.json  extraction_task.json
